syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package example;

service Example {
  rpc SendMessage (MessageRequest) returns (MessageReply) {}

  rpc SendMessageStream (stream MessageRequest) returns (MessageReply) {}

  rpc SendMessageStreamResponse (MessageRequest) returns (stream MessageReply) {}

  rpc SendMessageStreamDuplex (stream MessageRequest) returns (stream MessageReply) {}
}

message MessageRequest {
  string name = 1;
}

message MessageReply {
  enum EnumSuccess {
    OK = 0;
    KO = 1;
  }
  EnumSuccess success = 1;
  string message = 2;
}

